fix: 서브모듈 변경

--- a/frontend/layout.html
+++ b/frontend/layout.html
@@ -74,7 +74,7 @@
 
   <section>
     <div id="map" style="width:600px;height:600px;"></div>
-    <script type="test/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=843de9881c04c74982ab3924b1e63164&libraries=services"></script>
+    <script type="test/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=843de9881c04c74982ab3924b1e63164"></script>
     <script>
 
       var mapContainer = document.getElementById('map');
